# tanstack-actix-auth-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yaml  justfile
.github/workflows/: ci.yml
api/: .env.example  Cargo.toml
api/.posting/auth/: change-password.posting.yaml  confirm-email.posting.yaml  forgot-password.posting.yaml  log-in.posting.yaml  log-out.posting.yaml  set-password.posting.yaml  sign-up.posting.yaml  verify-forgot-password.posting.yaml
api/.posting/health/: health-check.posting.yaml
api/migrations/: 20260120082539_create_user_table.sql  20260124023218_add_email_confirmed_to_users.sql  20260124023219_create_refresh_tokens_table.sql  20260124023220_create_auth_codes_table.sql  20260220124500_add_email_change_auth_code_type.sql
api/src/: lib.rs  main.rs
api/src/auth/: codes.rs  cookies.rs  jwt.rs  middleware.rs  mod.rs  password.rs
api/src/core/: app.rs  app_state.rs  config.rs  docker.rs  env.rs  error.rs  logger.rs  mod.rs  server.rs
api/src/extractors/: mod.rs  validated_json.rs
api/src/models/: auth_code.rs  mod.rs  refresh_token.rs  user.rs
api/src/repository/: auth.rs  mod.rs
api/src/routes/: mod.rs
api/src/routes/auth/: handlers.rs  mod.rs  payloads.rs
api/src/routes/health/: handlers.rs  mod.rs
api/src/services/: email.rs  mod.rs
api/src/validators/: mod.rs  password_match.rs
api/tests/: auth_flows.rs
api/tests/support/: mod.rs
docker/env/: pgadmin.env.example  (+1 more)
web/: .cta.json  .gitignore  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
(+154 files in other folders)
