[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
colorized = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "rust_decimal"] }
rust_decimal = { version = "1.36", features = ["db-postgres", "serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.100"
serde_json = "1.0.149"
log = "0.4"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Email service
resend-rs = "0.7"

# Async/futures utilities
futures = "0.3"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
